syntax = "proto3";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc GiveFirstName (FirstNameRequest) returns (FirstNameReply) {}
    rpc GiveLastName (LastNameRequest) returns (LastNameReply) {}
}

message FirstNameRequest {
    string firstName = 1;
}

message FirstNameReply {
    string firstNameReply = 1;
}

message LastNameRequest {
    string lastName = 1;
}

message LastNameReply {
    string lastNameReply = 1;
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}
  